kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sushi
spec:
  selector:
    app: sushi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
