kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sushi-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  # Frontend - sushi.codewithxjohn.com
  - host: sushi.codewithxjohn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sushi-frontend
            port:
              number: 80
  # Frontend - www.sushi.codewithxjohn.com
  - host: www.sushi.codewithxjohn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sushi-frontend
            port:
              number: 80
  tls:
  - hosts:
    - sushi.codewithxjohn.com
    - www.sushi.codewithxjohn.com
    secretName: sushi-tls
